Rerun all notebooks with a consistent version of Python 3, as a point of reference, so diffs can be performed more easily.

--- a/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
+++ b/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
@@ -87,7 +87,7 @@
       "* R_iso    = 8.100079558158075e-01 , \n",
       "* M/R_Schw = 1.468770268913230e-01 \n",
       "\n",
-      "Single Polytrope TOV solution generated in: 0.16563940048217773 s\n",
+      "Single Polytrope TOV solution generated in: 0.09986114501953125 s\n",
       "Initial data file: outputTOVpolytrope.txt\n"
      ]
     }
@@ -773,7 +773,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting NRPyPlusTOVID//interface.ccl\n"
+      "Writing NRPyPlusTOVID//interface.ccl\n"
      ]
     }
    ],
@@ -799,7 +799,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting NRPyPlusTOVID//param.ccl\n"
+      "Writing NRPyPlusTOVID//param.ccl\n"
      ]
     }
    ],
@@ -893,7 +893,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting NRPyPlusTOVID//schedule.ccl\n"
+      "Writing NRPyPlusTOVID//schedule.ccl\n"
      ]
     }
    ],
@@ -953,7 +953,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting NRPyPlusTOVID/src/make.code.defn\n"
+      "Writing NRPyPlusTOVID/src/make.code.defn\n"
      ]
     }
    ],
@@ -984,17 +984,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb to latex\n",
-      "[NbConvertApp] Writing 102669 bytes to Tutorial-ETK_thorn-NRPyPlusTOVID.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb to latex\r\n",
+      "[NbConvertApp] Writing 102687 bytes to Tutorial-ETK_thorn-NRPyPlusTOVID.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
