--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
@@ -636,7 +636,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 6.423608303070068 seconds.\n"
+      "Finished BSSN symbolic expressions in 5.1335766315460205 seconds.\n"
      ]
     }
    ],
@@ -859,18 +859,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
       "Generating C code for Ricci tensor in Spherical coordinates.\n",
+      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Hydro_without_Hydro_Ccodes/enforce_detgammabar_constraint.h\n",
-      "Finished gamma constraint C codegen in 0.14730048179626465 seconds.\n",
+      "Finished gamma constraint C codegen in 0.0882256031036377 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Hydro_without_Hydro_Ccodes/Hamiltonian_constraint.h\n",
-      "Finished Hamiltonian C codegen in 10.034574747085571 seconds.\n",
+      "Finished Hamiltonian C codegen in 8.239075422286987 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Hydro_without_Hydro_Ccodes/rhs_eval.h\n",
-      "Finished BSSN_RHS C codegen in 15.618126630783081 seconds.\n",
+      "Finished BSSN_RHS C codegen in 13.1399245262146 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Hydro_without_Hydro_Ccodes/Ricci_eval.h\n",
-      "Finished Ricci C codegen in 34.489240884780884 seconds.\n"
+      "Finished Ricci C codegen in 29.976185083389282 seconds.\n"
      ]
     }
    ],
@@ -1501,16 +1501,16 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Hydro_without_Hydro_Ccodes/Hydro_without_Hydro_Playground.c -o Hydro_without_Hydro_Playground -lm`...\n",
-      "Finished executing in 7.033830881118774 seconds.\n",
+      "Finished executing in 6.020904779434204 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 7.045273303985596 seconds.\n",
+      "Finished in 6.0315961837768555 seconds.\n",
       "\n",
       "Now running, should take ~10 seconds...\n",
       "\n",
       "Executing `taskset -c 0,1,2,3 ./Hydro_without_Hydro_Playground 96 16 2 0.5`...\n",
-      "\u001b[2KIt: 300 t/M=1.77 dt/M=5.90e-03 | 98.4%; ETA 0 s | t/M/h 2348.95 | gp/s 1.36e+06\n",
-      "Finished executing in 2.8222568035125732 seconds.\n",
-      "Finished in 2.8354625701904297 seconds.\n",
+      "\u001b[2KIt: 300 t/M=1.77 dt/M=5.90e-03 | 98.4%; ETA 0 s | t/M/h 2851.71 | gp/s 1.65e+06\r\n",
+      "Finished executing in 2.4206759929656982 seconds.\n",
+      "Finished in 2.4326181411743164 seconds.\n",
       "\n"
      ]
     }
@@ -1820,9 +1820,9 @@
       "Now running, should take ~10 seconds...\n",
       "\n",
       "Executing `taskset -c 0,1,2,3 ./Hydro_without_Hydro_Playground 48 8 2 0.5`...\n",
-      "\u001b[2KIt: 70 t/M=1.65 dt/M=2.36e-02 | 92.1%; ETA 0 s | t/M/h 45731.81 | gp/s 1.65e+06\n",
-      "Finished executing in 0.2181541919708252 seconds.\n",
-      "Finished in 0.24186205863952637 seconds.\n"
+      "\u001b[2KIt: 70 t/M=1.65 dt/M=2.36e-02 | 92.1%; ETA 0 s | t/M/h 62971.56 | gp/s 2.28e+06\r\n",
+      "Finished executing in 0.21318292617797852 seconds.\n",
+      "Finished in 0.22589492797851562 seconds.\n"
      ]
     }
    ],
@@ -1931,20 +1931,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb to latex\n",
-      "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro_files/\n",
-      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro_files\n",
-      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro_files\n",
-      "[NbConvertApp] Writing 206445 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb to latex\r\n",
+      "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro_files/\r\n",
+      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro_files\r\n",
+      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro_files\r\n",
+      "[NbConvertApp] Writing 203861 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
