--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -680,14 +680,14 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWaveCurvilinear_Playground_Ccodes/ScalarWaveCurvilinear_Playground-SIMD.c -o ScalarWaveCurvilinear_Playground_Ccodes/output/ScalarWaveCurvilinear_Playground-SIMD -lm`...\n",
-      "Finished executing in 1.4146976470947266 seconds.\n",
+      "Finished executing in 1.2095661163330078 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground-SIMD 16  8 16`...\n",
-      "Finished executing in 0.2085282802581787 seconds.\n",
+      "Finished executing in 0.2112717628479004 seconds.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground-SIMD 24 12 24`...\n",
-      "Finished executing in 0.6077070236206055 seconds.\n",
+      "Finished executing in 0.6105663776397705 seconds.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground-SIMD 48 24 48`...\n",
-      "Finished executing in 18.23954939842224 seconds.\n"
+      "Finished executing in 18.037780046463013 seconds.\n"
      ]
     }
    ],
@@ -849,17 +849,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb to latex\n",
-      "[NbConvertApp] Writing 105099 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb to latex\r\n",
+      "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-ScalarWaveCurvilinear_files/\r\n",
+      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-ScalarWaveCurvilinear_files\r\n",
+      "[NbConvertApp] Writing 106138 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
