--- a/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
+++ b/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
@@ -93,7 +93,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing TOV/Polytropic_EOSs_validation.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $validation_file_path\n",
     "## Polytropic EOSs Python Module\n",
@@ -2382,7 +2390,7 @@
       "MS1 : DONE after 19 iterations!\n",
       "MS1b: DONE after 19 iterations!\n",
       "MPA1: DONE after 22 iterations!\n",
-      "Finished generating plot data. Time elapsed: 38.10 seconds.\n"
+      "Finished generating plot data. Time elapsed: 38.74 seconds.\n"
      ]
     }
    ],
@@ -2542,20 +2550,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb to latex\n",
-      "[NbConvertApp] Support files will be in Tutorial-TOV-Piecewise_Polytrope_EOSs_files/\n",
-      "[NbConvertApp] Making directory Tutorial-TOV-Piecewise_Polytrope_EOSs_files\n",
-      "[NbConvertApp] Making directory Tutorial-TOV-Piecewise_Polytrope_EOSs_files\n",
-      "[NbConvertApp] Writing 246887 bytes to Tutorial-TOV-Piecewise_Polytrope_EOSs.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "[NbConvertApp] Converting notebook Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb to latex\r\n",
+      "[NbConvertApp] Support files will be in Tutorial-TOV-Piecewise_Polytrope_EOSs_files/\r\n",
+      "[NbConvertApp] Making directory Tutorial-TOV-Piecewise_Polytrope_EOSs_files\r\n",
+      "[NbConvertApp] Making directory Tutorial-TOV-Piecewise_Polytrope_EOSs_files\r\n",
+      "[NbConvertApp] Making directory Tutorial-TOV-Piecewise_Polytrope_EOSs_files\r\n",
+      "[NbConvertApp] Writing 248280 bytes to Tutorial-TOV-Piecewise_Polytrope_EOSs.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
