--- a/Tutorial-ADM_Initial_Data-TOV.ipynb
+++ b/Tutorial-ADM_Initial_Data-TOV.ipynb
@@ -465,17 +465,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-TOV.ipynb to latex\n",
-      "[NbConvertApp] Writing 56763 bytes to Tutorial-ADM_Initial_Data-TOV.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-TOV.ipynb to latex\r\n",
+      "[NbConvertApp] Writing 56763 bytes to Tutorial-ADM_Initial_Data-TOV.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
