--- a/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
+++ b/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
@@ -204,7 +204,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/src/InitialData.c\n"
+      "Writing FishboneMoncriefID/src/InitialData.c\n"
      ]
     }
    ],
@@ -371,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/interface.ccl\n"
+      "Writing FishboneMoncriefID/interface.ccl\n"
      ]
     }
    ],
@@ -397,7 +397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/param.ccl\n"
+      "Writing FishboneMoncriefID/param.ccl\n"
      ]
     }
    ],
@@ -515,7 +515,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/schedule.ccl\n"
+      "Writing FishboneMoncriefID/schedule.ccl\n"
      ]
     }
    ],
@@ -580,7 +580,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/src/make.code.defn\n"
+      "Writing FishboneMoncriefID/src/make.code.defn\n"
      ]
     }
    ],
@@ -611,17 +611,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-FishboneMoncriefID.ipynb to latex\n",
-      "[NbConvertApp] Writing 61952 bytes to Tutorial-ETK_thorn-FishboneMoncriefID.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-FishboneMoncriefID.ipynb to latex\r\n",
+      "[NbConvertApp] Writing 80155 bytes to Tutorial-ETK_thorn-FishboneMoncriefID.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
@@ -638,19 +638,19 @@
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
