--- a/Tutorial-Numerical_Grids.ipynb
+++ b/Tutorial-Numerical_Grids.ipynb
@@ -89,9 +89,9 @@
       "\n",
       "\n",
       "\n",
-      "('Here is the list of registered evolved variables: ', [])\n",
-      "('... and here is the list of registered auxiliary variables: ', ['phi'])\n",
-      "('... and here is the list of registered auxevol variables: ', [])\n",
+      "Here is the list of registered evolved variables:  []\n",
+      "... and here is the list of registered auxiliary variables:  ['phi']\n",
+      "... and here is the list of registered auxevol variables:  []\n",
       "\n",
       "\n",
       " ... and here is the output gridfunction_defines.h file:\n",
@@ -152,19 +152,19 @@
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
