--- a/Tutorial-Start_to_Finish-FishboneMoncriefID_standalone.ipynb
+++ b/Tutorial-Start_to_Finish-FishboneMoncriefID_standalone.ipynb
@@ -97,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/FM_standalone.c\n"
+      "Writing FishboneMoncriefID/FM_standalone.c\n"
      ]
     }
    ],
@@ -181,18 +181,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-11-18 23:20:17--  http://astro.phys.wvu.edu/zetienne/torus_cuts.csv\r\n",
+      "--2019-11-23 23:26:04--  http://astro.phys.wvu.edu/zetienne/torus_cuts.csv\r\n",
       "Resolving astro.phys.wvu.edu (astro.phys.wvu.edu)... 157.182.3.45\r\n",
       "Connecting to astro.phys.wvu.edu (astro.phys.wvu.edu)|157.182.3.45|:80... connected.\r\n",
       "HTTP request sent, awaiting response... 200 OK\r\n",
       "Length: 16445 (16K) [text/csv]\r\n",
       "Saving to: ‘torus_cuts.csv’\r\n",
       "\r\n",
-      "\r",
-      "torus_cuts.csv        0%[                    ]       0  --.-KB/s               \r",
-      "torus_cuts.csv      100%[===================>]  16.06K  --.-KB/s    in 0s      \r\n",
+      "torus_cuts.csv      100%[===================>]  16.06K  --.-KB/s    in 0.01s   \r\n",
       "\r\n",
-      "2019-11-18 23:20:17 (131 MB/s) - ‘torus_cuts.csv’ saved [16445/16445]\r\n",
+      "2019-11-23 23:26:04 (1.35 MB/s) - ‘torus_cuts.csv’ saved [16445/16445]\r\n",
       "\r\n"
      ]
     },
