--- a/Tutorial-Start_to_Finish-ScalarWave.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave.ipynb
@@ -578,12 +578,12 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWave_Ccodes/ScalarWave_Playground.c -o ScalarWave_Playground -lm`...\n",
-      "Finished executing in 0.8101346492767334 seconds.\n",
+      "Finished executing in 0.8099210262298584 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWave_Playground 48`...\n",
-      "Finished executing in 0.2076249122619629 seconds.\n",
+      "Finished executing in 0.21210360527038574 seconds.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWave_Playground 64`...\n",
-      "Finished executing in 0.406360387802124 seconds.\n"
+      "Finished executing in 0.4102935791015625 seconds.\n"
      ]
     }
    ],
@@ -696,19 +696,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-ScalarWave.ipynb to latex\n",
-      "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-ScalarWave_files/\n",
-      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-ScalarWave_files\n",
-      "[NbConvertApp] Writing 95260 bytes to Tutorial-Start_to_Finish-ScalarWave.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-ScalarWave.ipynb to latex\r\n",
+      "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-ScalarWave_files/\r\n",
+      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-ScalarWave_files\r\n",
+      "[NbConvertApp] Writing 95138 bytes to Tutorial-Start_to_Finish-ScalarWave.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
