NRPyPlus_Tutorial main page: Add GRMHD equation notebook

--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -107,8 +107,9 @@
     "\n",
     "### PART 5: Numerical Relativity $-$ General Relativistic Hydrodynamics (GRHD), Force-Free Electrodynamics (GRFFE), & Magnetohydrodynamics (GRMHD)\n",
     "\n",
-    "+ [The equations of general relativistic hydrodynamics, in Cartesian coordinates](Tutorial-GRHD_Equations-Cartesian.ipynb)\n",
-    "+ [The equations of general relativistic, force-free electrodynamics, in Cartesian coordinates](Tutorial-GRFFE_Equations-Cartesian.ipynb)\n",
+    "+ [The equations of general relativistic hydrodynamics (**GRHD**), in Cartesian coordinates](Tutorial-GRHD_Equations-Cartesian.ipynb)\n",
+    "+ [The equations of general relativistic, force-free electrodynamics (**GRFFE**), in Cartesian coordinates](Tutorial-GRFFE_Equations-Cartesian.ipynb)\n",
+    "+ [The equations of general relativistic magnetohydrodynamics (**GRMHD**), in Cartesian coordinates](Tutorial-GRMHD_Equations-Cartesian.ipynb)\n",
     "+ [**`IllinoisGRMHD`** ](IllinoisGRMHD/doc/) with piecewise-polytrope equation of state support (*Courtesy Leo Werneck*): <font color='red'>***In progress***</font>\n",
     "    + Diagnostic notebook: [<font color='green'>**sbPoynETNRPy**</font>: Evaluating $b^\\mu$ and $S^i$ in the <font color='green'>**Einstein Toolkit**</font>, using HydroBase variables as input](Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb)\n",
     "         + Tutorial notebook: [Computing the 4-Velocity Time-Component $u^0$, the Magnetic Field Measured by a Comoving Observer $b^{\\mu}$, and the Poynting Vector $S^i$](Tutorial-u0_smallb_Poynting-Cartesian.ipynb)\n"
