Two bugfixes: outputC: Add sqrt, cbrt, and pow(x,-1) to sp.Pow() C conversions; Also fix tau_tilde_flux function inside GRHD, so it reads in rho_star

--- a/Tutorial-GRHD_Equations-Cartesian.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian.ipynb
@@ -338,7 +338,7 @@
    "outputs": [],
    "source": [
     "# Step 4.c: tau_tilde flux\n",
-    "def compute_tau_tilde_fluxU(alpha, sqrtgammaDET, vU,T4UU):\n",
+    "def compute_tau_tilde_fluxU(alpha, sqrtgammaDET, vU,T4UU, rho_star):\n",
     "    global tau_tilde_fluxU\n",
     "    tau_tilde_fluxU = ixp.zerorank1(DIM=3)\n",
     "    for j in range(3):\n",
@@ -738,8 +738,8 @@
     "compute_vU_from_u4U__no_speed_limit(u4U)\n",
     "\n",
     "# Next compute fluxes of conservative variables\n",
-    "compute_rho_star_fluxU(vU, rho_star)\n",
-    "compute_tau_tilde_fluxU(alpha,              sqrtgammaDET, vU,T4UU)\n",
+    "compute_rho_star_fluxU(                                   vU,      rho_star)\n",
+    "compute_tau_tilde_fluxU(alpha,              sqrtgammaDET, vU,T4UU, rho_star)\n",
     "compute_S_tilde_fluxUD( alpha,              sqrtgammaDET,    T4UD)\n",
     "\n",
     "# Then declare derivatives & compute g4DD_zerotimederiv_dD\n",
@@ -799,8 +799,8 @@
     "Ge.compute_vU_from_u4U__no_speed_limit(u4U)\n",
     "\n",
     "# Next compute fluxes of conservative variables\n",
-    "Ge.compute_rho_star_fluxU (                                     Ge.vU,Ge.rho_star)\n",
-    "Ge.compute_tau_tilde_fluxU(alpha,              Ge.sqrtgammaDET, Ge.vU,Ge.T4UU)\n",
+    "Ge.compute_rho_star_fluxU (                                     Ge.vU,         Ge.rho_star)\n",
+    "Ge.compute_tau_tilde_fluxU(alpha,              Ge.sqrtgammaDET, Ge.vU,Ge.T4UU, Ge.rho_star)\n",
     "Ge.compute_S_tilde_fluxUD (alpha,              Ge.sqrtgammaDET,       Ge.T4UD)\n",
     "\n",
     "# Then declare derivatives & compute g4DD_zerotimederiv_dD\n",
@@ -914,17 +914,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-GRHD_Equations-Cartesian.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 93515 bytes to Tutorial-GRHD_Equations-Cartesian.tex\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n"
+      "[NbConvertApp] Converting notebook Tutorial-GRHD_Equations-Cartesian.ipynb to latex\n",
+      "[NbConvertApp] Writing 93682 bytes to Tutorial-GRHD_Equations-Cartesian.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
      ]
     }
    ],
