--- a/Tutorial-GRMHD_Equations-Cartesian.ipynb
+++ b/Tutorial-GRMHD_Equations-Cartesian.ipynb
@@ -270,8 +270,8 @@
     "GRHD.compute_vU_from_u4U__no_speed_limit(u4U)\n",
     "\n",
     "# Next compute fluxes of conservative variables\n",
-    "GRHD.compute_rho_star_fluxU(GRHD.vU, GRHD.rho_star)\n",
-    "GRHD.compute_tau_tilde_fluxU(alpha, GRHD.sqrtgammaDET, GRHD.vU,T4UU)\n",
+    "GRHD.compute_rho_star_fluxU(                           GRHD.vU,     GRHD.rho_star)\n",
+    "GRHD.compute_tau_tilde_fluxU(alpha, GRHD.sqrtgammaDET, GRHD.vU,T4UU,GRHD.rho_star)\n",
     "GRHD.compute_S_tilde_fluxUD( alpha, GRHD.sqrtgammaDET,         T4UD)\n",
     "\n",
     "# Then declare derivatives & compute g4DD_zerotimederiv_dD\n",
@@ -384,7 +384,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GRMHD_Equations-Cartesian.ipynb to latex\n",
-      "[NbConvertApp] Writing 53138 bytes to Tutorial-GRMHD_Equations-Cartesian.tex\n",
+      "[NbConvertApp] Writing 52982 bytes to Tutorial-GRMHD_Equations-Cartesian.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
