Tutorial-GRHD_Equations-Cartesian-c-code: reflect latest outputC optimization

--- a/Tutorial-GRHD_Equations-Cartesian-c-code.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian-c-code.ipynb
@@ -202,7 +202,7 @@
       "   const double tmp19 = 2*tmp16;\r\n",
       "   const double tmp20 = (1.0/2.0)*fabs(-tmp0 - tmp11 - tmp17 - tmp18 - tmp19 - tmp5 - tmp8 + 1);\r\n",
       "   const double tmp21 = tmp1 - tmp12 - tmp14 - tmp15 - tmp16 + tmp20 - tmp6 - tmp9 + 1.0/2.0;\r\n",
-      "   const double tmp22 = pow(tmp21, -1.0/2.0);\r\n",
+      "   const double tmp22 = (1.0/sqrt(tmp21));\r\n",
       "   const double tmp23 = sqrt((-tmp1 + tmp12 + tmp14 + tmp15 + tmp16 - tmp20 + tmp6 + tmp9 + 1.0/2.0)/(TINYDOUBLE + tmp11 + tmp17 + tmp18 + tmp19 + tmp5 + tmp8));\r\n",
       "   const double tmp24 = -mi.betaX + tmp23*tmp4;\r\n",
       "   const double tmp25 = sqrt(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*((mi.gamDDyz)*(mi.gamDDyz)) - ((mi.gamDDxy)*(mi.gamDDxy))*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - ((mi.gamDDxz)*(mi.gamDDxz))*mi.gamDDyy);\r\n",
