CurviBoundaryConditions: Update API to allow for more flexibility in output directory; also copy static files to boundary conditions Ccodesdir automatically, to reduce copy/paste

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -815,12 +815,7 @@
    ],
    "source": [
     "import CurviBoundaryConditions.CurviBoundaryConditions as cbcs\n",
-    "cmd.mkdir(os.path.join(Ccodesdir,\"boundary_conditions/\"))\n",
-    "for file in [\"apply_bcs_curvilinear.h\",\"BCs_data_structs.h\",\"bcstruct_freemem.h\",\"CurviBC_include_Cfunctions.h\",\n",
-    "             \"driver_bcstruct.h\",\"set_bcstruct.h\",\"set_up__bc_gz_map_and_parity_condns.h\"]:\n",
-    "    shutil.copy(os.path.join(\"CurviBoundaryConditions\",\"boundary_conditions\", file), \n",
-    "                os.path.join(Ccodesdir,\"boundary_conditions/\"))\n",
-    "cbcs.Set_up_CurviBoundaryConditions(os.path.join(Ccodesdir,\"boundary_conditions/\"))"
+    "cbcs.Set_up_CurviBoundaryConditions(os.path.join(Ccodesdir,\"boundary_conditions/\"),Cparamspath=os.path.join(\"../\"))"
    ]
   },
   {
