--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -302,7 +302,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 5.442670583724976 seconds.\n"
+      "Finished BSSN symbolic expressions in 4.562561988830566 seconds.\n"
      ]
     }
    ],
@@ -508,20 +508,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating C code for Ricci tensor in Spherical coordinates.\n",
       "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
-      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
-      "Finished BL initial data codegen in 15.9262375831604 seconds.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
+      "Generating C code for Ricci tensor in Spherical coordinates.\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Two_BHs_Collide_Ccodes/enforce_detgammabar_constraint.h\n",
-      "Finished gamma constraint C codegen in 0.30390262603759766 seconds.\n",
+      "Finished gamma constraint C codegen in 0.12770938873291016 seconds.\n",
+      "Finished BL initial data codegen in 6.038717031478882 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Two_BHs_Collide_Ccodes/Hamiltonian_constraint.h\n",
-      "Finished Hamiltonian C codegen in 26.378612279891968 seconds.\n",
+      "Finished Hamiltonian C codegen in 10.56939172744751 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Two_BHs_Collide_Ccodes/rhs_eval.h\n",
-      "Finished BSSN_RHS C codegen in 34.87080001831055 seconds.\n",
+      "Finished BSSN_RHS C codegen in 18.211145401000977 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Two_BHs_Collide_Ccodes/Ricci_eval.h\n",
-      "Finished Ricci C codegen in 62.9210159778595 seconds.\n"
+      "Finished Ricci C codegen in 44.1537446975708 seconds.\n"
      ]
     }
    ],
@@ -666,12 +666,7 @@
    ],
    "source": [
     "import CurviBoundaryConditions.CurviBoundaryConditions as cbcs\n",
-    "cmd.mkdir(os.path.join(Ccodesdir,\"boundary_conditions/\"))\n",
-    "for file in [\"apply_bcs_curvilinear.h\",\"BCs_data_structs.h\",\"bcstruct_freemem.h\",\"CurviBC_include_Cfunctions.h\",\n",
-    "             \"driver_bcstruct.h\",\"set_bcstruct.h\",\"set_up__bc_gz_map_and_parity_condns.h\"]:\n",
-    "    shutil.copy(os.path.join(\"CurviBoundaryConditions\",\"boundary_conditions\", file), \n",
-    "                os.path.join(Ccodesdir,\"boundary_conditions/\"))\n",
-    "cbcs.Set_up_CurviBoundaryConditions(os.path.join(Ccodesdir,\"boundary_conditions/\"))"
+    "cbcs.Set_up_CurviBoundaryConditions(os.path.join(Ccodesdir,\"boundary_conditions/\"),Cparamspath=os.path.join(\"../\"))"
    ]
   },
   {
@@ -1061,14 +1056,14 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BSSN_Two_BHs_Collide_Ccodes/output/BrillLindquist_Playground -lm`...\n",
-      "Finished executing in 11.054884672164917 seconds.\n",
+      "Finished executing in 8.825489044189453 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1 ./BrillLindquist_Playground 72 12 2 1.0`...\n",
-      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 5301.75 | gp/s 7.47e+05\n",
-      "Finished executing in 5.227325201034546 seconds.\n",
-      "Executing `taskset -c 0,1 ./BrillLindquist_Playground 96 16 2 1.0`...\n",
-      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 1886.51 | gp/s 8.40e+055\n",
-      "Finished executing in 14.45749807357788 seconds.\n",
+      "Executing `taskset -c 0,1,2,3,4,5 ./BrillLindquist_Playground 72 12 2 1.0`...\n",
+      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 7075.29 | gp/s 9.96e+05\n",
+      "Finished executing in 4.016986131668091 seconds.\n",
+      "Executing `taskset -c 0,1,2,3,4,5 ./BrillLindquist_Playground 96 16 2 1.0`...\n",
+      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 2226.46 | gp/s 9.91e+055\n",
+      "Finished executing in 12.440909385681152 seconds.\n",
       "Finished this code cell.\n"
      ]
     }
@@ -1493,7 +1488,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb to latex\n",
-      "[NbConvertApp] Writing 165708 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.tex\n",
+      "[NbConvertApp] Writing 160316 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
